--- a/TelaTeste.html
+++ b/TelaTeste.html
@@ -1,4 +1,3 @@
-
 <section id="sec1">
     <br>
     <br>
@@ -6,6 +5,7 @@
     <p><strong>Preocupado com o futuro pois não sabe que curso seguir? Faça o nosso teste e descubra! ;D</strong></p>
 </section>
 
+<div class="container">
     <section id="sec2">
       <p>#TESTE RÁPIDO</p>
       <h2 id="int">SOBRE O TESTE</h2>
@@ -15,7 +15,8 @@
       <p id="bie">Faça com calma e paciência, evite ao máximo responder com "não sei".</p>
       <p id="bo">Precisão</p>
       <p id="boe">Para melhores precisões, tente fazer o nosso teste tradicional.</p>
-     
+    <br>
+    <br>
 
       <a href="TesteVocacional.html">
         <button class="button">Realizar Teste</button>
@@ -26,7 +27,8 @@
     <p>#TESTE TRADICIONAL</p>
     <h2 id="into">COMO REALIZAR O TESTE?</h2>
     <p id="ca">Não pense muito</p>
-    <p id="ce">Faça com calma,mas tente não pensar muito para não interferir nas respostas.</p>
+    <p id="ce">Faça com calma,mas tente não pensar muito para<br>
+         não interferir nas respostas.</p>
     <p id="ci">Responda todas as questões</p>
     <p id="co">No total são 20 questões. Tente ao máximo evitar responder com "não sei".</p>
     <p id="cu">Seja sincero</p>
@@ -36,6 +38,7 @@
       <button class="button">Realizar Teste</button>
       </a>
 </section>
+</div>
 
 
 </body>
