--- a/TelaMapa.html
+++ b/TelaMapa.html
@@ -11,15 +11,15 @@
     <div class="carousel">
         <div class="carousel-inner">
             <div class="carousel-slide">
-                <img id="cu" src="https://th.bing.com/th/id/R.55d9438a6f9a408f09e4e25544c99d29?rik=ykC8lNBnpGBOaA&riu=http%3a%2f%2fphotos.wikimapia.org%2fp%2f00%2f02%2f26%2f21%2f82_full.jpeg&ehk=bxJvj1z2nRh7Bk%2bojD%2fSeS4R%2b3frOJN7REYW9UGgaZE%3d&risl=&pid=ImgRaw&r=0" alt="ent">
+                <img id="ca" src="https://th.bing.com/th/id/R.55d9438a6f9a408f09e4e25544c99d29?rik=ykC8lNBnpGBOaA&riu=http%3a%2f%2fphotos.wikimapia.org%2fp%2f00%2f02%2f26%2f21%2f82_full.jpeg&ehk=bxJvj1z2nRh7Bk%2bojD%2fSeS4R%2b3frOJN7REYW9UGgaZE%3d&risl=&pid=ImgRaw&r=0" alt="ent">
                 <p class="description">Esta é a quadra da escola, onde praticamos esportes, realizamos competições e nos reunimos para atividades físicas e recreativas.</p>
             </div>
             <div class="carousel-slide">
-                <img id="cu" src="auditorio.jpeg" alt="auditorio">
+                <img id="ca" src="auditorio.jpeg" alt="auditorio">
                 <p class="description">Esse é o auditório da nossa escola, onde assistimos palestras,realizamos eventos e muito mais.</p>
             </div>
             <div class="carousel-slide">
-                <img id="cu" src="lab4.jpeg" alt="lab4">
+                <img id="ca" src="lab4.jpeg" alt="lab4">
                 <p class="description">Esse é o Laboratório 4 de Informática, onde aprendemos programação, exploramos novas tecnologias, etc.</p>
             </div>
            
